--- a/shared/src/main/res/values-cs/strings.xml
+++ b/shared/src/main/res/values-cs/strings.xml
@@ -171,8 +171,8 @@ nebude to trvat dlouho!</string>
     <string name="onboarding_title_1">Messaging Re-imagined</string>
     <string name="onboarding_title_2">Dostupné kdekoli</string>
     <string name="onboarding_title_3">Mocná customizace</string>
-    <string name="onboarding_content_1">"Uhlazený a plynulý vzhled s bezešvou integrací.
-Pulse staví vaše konverzace na první místo."</string>
+    <string name="onboarding_content_1">Uhlazený a plynulý vzhled s bezešvou integrací.
+Pulse staví vaše konverzace na první místo.</string>
     <string name="onboarding_content_2">Pište zprávy z vašeho tabletu, počítače, hodinek nebo jakéhokoli jiného propojeného zařízení.</string>
     <string name="onboarding_content_3">Připněte, ztlumte, změňte vzhled a upravte upozornění pro jakýkoli kontakt se kterým si píšete. Upravte Pulse podle sebe.</string>
     <string name="message_anywhere_onboarding_title_1">Pište odkudkoli</string>
