--- a/shared/src/main/res/values-de/strings.xml
+++ b/shared/src/main/res/values-de/strings.xml
@@ -157,8 +157,8 @@
     <string name="onboarding_title_1">SMS neu erfunden</string>
     <string name="onboarding_title_2">Überall verfügbar</string>
     <string name="onboarding_title_3">Vielfältige Personalisierung</string>
-    <string name="onboarding_content_1">"Weiche, intuitive Layouts mit einem kraftvollen Design und nahtloser Integration.
-Pulse stellt Ihre Unterhaltungen in den Mittelpunkt."</string>
+    <string name="onboarding_content_1">Weiche, intuitive Layouts mit einem kraftvollen Design und nahtloser Integration.
+Pulse stellt Ihre Unterhaltungen in den Mittelpunkt.</string>
     <string name="onboarding_content_2">Nutzen Sie SMS von Ihrem Tablet, Computer, Ihrer Smart Watch, oder jedem anderen vernetzten Gerät.</string>
     <string name="onboarding_content_3">Personalisieren Sie die Benachrichtigungen für jeden Kontakt einzeln, oder stellen Sie sie einfach ab. Machen Sie Pulse zu Ihrem!</string>
     <string name="message_anywhere_onboarding_title_1">SMS überall</string>
