--- a/shared/src/main/res/values-tr/strings.xml
+++ b/shared/src/main/res/values-tr/strings.xml
@@ -171,8 +171,8 @@ Uzun sürmeyecek!</string>
     <string name="onboarding_title_1">Yeniden hayal edilen mesajlaşma</string>
     <string name="onboarding_title_2">Her Yerde Mevcut</string>
     <string name="onboarding_title_3">Güçlü Özelleştirme</string>
-    <string name="onboarding_content_1">"Güçlü bir tasarım ve kesintisiz entegrasyona sahip pürüzsüz, akışkan düzenleri.
-Nabız konuşmalarınızı öne ve ortama koyar."</string>
+    <string name="onboarding_content_1">Güçlü bir tasarım ve kesintisiz entegrasyona sahip pürüzsüz, akışkan düzenleri.
+Nabız konuşmalarınızı öne ve ortama koyar.</string>
     <string name="onboarding_content_2">Tabletiniz, bilgisayarınız, saatiniz veya bağlı diğer cihazlarınızdan gelen mesajlar.</string>
     <string name="onboarding_content_3">Sohbet ettiğiniz tüm kişiler için uyarı işaretleri, sessiz, tema ve özelleştirin. Darbe sizinkini yapın.</string>
     <string name="message_anywhere_onboarding_title_1">Masaj Her Yerde</string>
