--- a/shared/src/main/res/values-fr/strings.xml
+++ b/shared/src/main/res/values-fr/strings.xml
@@ -47,7 +47,7 @@
     <string name="menu_conversation_information">Informations de la conversation</string>
     <string name="menu_conversation_blacklist">Mettre le contact en liste noire</string>
     <string name="menu_conversation_schedule">Programmer un message</string>
-    <string name="menu_contact_settings">Paramètres du contact</string>
+    <string name="menu_contact_settings">Paramètres de la conversation</string>
     <string name="menu_group_settings">Paramètres du groupe</string>
     <string name="menu_snooze_off">Désactivé</string>
     <string name="menu_snooze_1">1 heure</string>
@@ -84,6 +84,10 @@
     </plurals>
     <string name="undo">Annuler</string>
     <string name="enter_search">Recherche...</string>
+    <string name="text_anywhere_description">Savez-vous que Pulse est bien plus qu\'une simple application pour téléphone ?
+Vous pouvez utiliser Pulse pour échanger des messages depuis <b>tout</b> appareil !</string>
+    <string name="convo_list_try_it">Essayez !</string>
+    <string name="convo_list_not_now">Pas maintenant</string>
     <!-- Search Screen -->
     <string name="conversations">Conversations</string>
     <string name="messages">Messages</string>
@@ -162,7 +166,7 @@ Commencez !
     <string name="onboarding_title_1">Messagerie réinventée</string>
     <string name="onboarding_title_2">Disponible Partout</string>
     <string name="onboarding_title_3">Forte Personalisation</string>
-    <string name="onboarding_content_1">"Lisse, avec une disposition fluide, un design puissant et une intégration transparente. Pulse place vos conversations au centre de tout."</string>
+    <string name="onboarding_content_1">Lisse, avec une disposition fluide, un design puissant et une intégration transparente. Pulse place vos conversations au centre de tout.</string>
     <string name="onboarding_content_2">Envoyez des messages depuis votre tablette, ordinateur, montre connectée, ou tout autre appareil connecté.</string>
     <string name="onboarding_content_3">Épinglez, désactivez ou personnalisez les notifications pour chacun de vos contacts. Faites de Pulse votre application.</string>
     <string name="message_anywhere_onboarding_title_1">Envoyez des messages de partout</string>
@@ -201,6 +205,12 @@ Commencez !
     <string name="new_message">Nouveau message</string>
     <string name="received_new_message">Vous avez reçu un nouveau message !</string>
     <string name="media">Médias</string>
+    <string name="test_notifications_channel">Tester les notifications</string>
+    <string name="general_notifications_channel">Notifications générales</string>
+    <string name="media_parse_channel">Analyseur de média</string>
+    <string name="failed_messages_channel">Messages en échec</string>
+    <string name="media_parse_text">Analyse des médias des messages précédents...</string>
+    <string name="creating_channels_text">Création des canaux de notification...</string>
     <!-- About, Help and Feedback and Settings -->
     <string name="changelog">Historique des versions de l\'application</string>
     <string name="copyright">© 2016 Jake Klinker &amp; Luke Klinker</string>
@@ -269,6 +279,7 @@ pourriez rencontrer !</string>
     <string name="vibrate_one_long_one_short">Une longue, et une courte vibration</string>
     <string name="vibrate_one_short">Une courte vibration</string>
     <string name="vibrate_one_long">Une longue vibration</string>
+    <string name="vibrate_one_extra_long">Une vibration extra-longue</string>
     <string name="keyboard_layout">Disposition du clavier</string>
     <string name="keyboard_default">Clavier par défaut</string>
     <string name="keyboard_send_key">Touche Envoi</string>
@@ -304,7 +315,7 @@ pourriez rencontrer !</string>
     <string name="delete_account_confirmation">Êtes vous sur de vouloir supprimer ce compte et tout ce qui va avec ? Vous pourrez toujours vous réinscrire plus tard !</string>
     <string name="change_subscription">Changer d\'abonnement</string>
     <string name="cancel_on_the_play_store">Annuler et afficher votre abonnement sur Play Store</string>
-    <string name="resync_account">Resynchroniser le compte</string>
+    <string name="resync_account">Resynchroniser les messages</string>
     <string name="resync_account_summary">Des messages manquants ?
 A utiliser pour synchroniser vos messages avec l’appareil principal.</string>
     <string name="resync_account_summary_phone">Cette action effacera votre compte et l\'actualisera avec les messages présents actuellement dans votre base de données SMS interne.</string>
@@ -428,6 +439,8 @@ Essayez aujourd\'hui !</string>
     <string name="hours">Heures</string>
     <string name="minutes">Minutes</string>
     <string name="test">Test</string>
+    <string name="channel_settings">Paramètres du canal de notification</string>
+    <string name="channels">Canaux</string>
     <string name="off">Inactif</string>
     <string name="on">Actif</string>
     <string name="rate_it">Noter l\'application !</string>
@@ -435,6 +448,7 @@ Essayez aujourd\'hui !</string>
     <string name="give_a_rating">Merci de noter l\'application ou de la partager avec vos amis !\n\n
 Votre avis à 5 étoiles me fera le plus grand plaisir :)</string>
     <string name="share_promo">Hey, j\'utilise Pulse pour envoyer des messages ! Essaye la : https://play.google.com/store/apps/details?id=xyz.klinker.messenger</string>
+    <string name="verifying_password">Vérification du mot de passe...</string>
     <!-- Times -->
     <string name="one_second">Une seconde</string>
     <string name="three_seconds">Trois secondes</string>
